# tg_bot_die

./: .dockerignore  Dockerfile  README.md  bot_start.py  main.py  pyproject.toml
app/: handlers.py  keyboards.py
