[project]
name = "tg-bot-random"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "aiogram==3.23.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "attrs==25.4.0",
    "certifi==2025.11.12",
    "dotenv==0.9.9",
    "frozenlist==1.8.0",
    "idna==3.11",
    "magic-filter==1.0.12",
    "multidict==6.7.0",
    "propcache==0.4.1",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-dotenv==1.2.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "yarl==1.22.0",
]
